SFDC Automation/src/objects/Postal_Code__c.object
<CustomObject>
    <description>Holds the mapping between zip code and timezone. Source data is PostalCodes table in AMDATA.</description>
    <fields>
        <fullName>Area_Code__c</fullName>
        <label>Area Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_COMBO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDM / COMBO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_Codes_BDM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DBD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_Codes_DBD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_Codes_DOS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Observes Day Light Savings</description>
        <inlineHelpText>Observes Day Light Savings</inlineHelpText>
        <label>DST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dist_to_Ryder_Branch__c</fullName>
        <label>Dist to Ryder Branch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_Codes_IAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOCAL_TSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOCAL TSA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_Codes_Local_TSA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NATIONAL_TSA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NATIONAL_TSA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_Codes_National_TSA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nearest_Ryder_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will hold the data of the nearest Ryder Branch from the selected Postal Code</description>
        <inlineHelpText>This field will hold the data of the nearest Ryder Branch from the selected Postal Code</inlineHelpText>
        <label>Nearest Ryder Branch</label>
        <referenceTo>Ryder_Branch__c</referenceTo>
        <relationshipLabel>Postal Codes</relationshipLabel>
        <relationshipName>Postal_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <externalId>true</externalId>
        <label>Postal Code</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <label>State Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTC__c</fullName>
        <label>UTC</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UVS_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UVS Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Postal_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Postal Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>DBD__c</columns>
        <columns>BDM_COMBO__c</columns>
        <columns>Time_Zone__c</columns>
        <columns>Area_Code__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Postal Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>